--- a/0x03-javascript/4-todo/index.html
+++ b/0x03-javascript/4-todo/index.html
@@ -9,11 +9,11 @@
 <body>
     <hi>To Do List</hi>
     <dv class="container">
-        <input id="inputField" type="text"><button id="addToDo">+</button>
-        <div class="to-dos" id="toDocontainer">
-            
-
+        <div class="addButton">
+            <input id="inputField" type="text">
+            <button id="addToDo">+</button>
         </div>
+        <div class="to-dos" id="toDocontainer"></div>
     </dv>
     <script src="app.js"></script>
 </body>
